--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,5 +61,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    apply plugin: 'kotlin-android'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
+
